2013-02-08  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c, src/ftcommon.h (FTDemo_New): Take no parameter.

	* src/ftgrid.c, src/ftstring.c, src/ftview.c: Updated.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Remove options `-n' and `d'; add `-v' to show version.

	* src/ttdebug.c: Include `common.h'.
	(Panic): Renamed to...
	(Abort): This to avoid name clash.
	(dump_mode, non_interactive_mode): Removed.  Unused.
	(main): Use `getopt'.
	Implement `-v' to show FreeType version.
	(Usage): Updated and synchronized with other usage messages from
	FreeType demo programs.

	* Makefile (ttdebug$E): Updated to use `common.c'.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make `q' work correctly.

	* src/ttdebug.c (Quit): New macro.
	(RunIns, main): Handle `Quit'.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (RunIns): Slightly beautify output.
	(Usage): Mention help key.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make it work again (partially).

	Since we now have lazy execution of the `prep' bytecode, the old
	ttdebug code no longer could debug it.

	The new code debugs `fpgm', `prep', and the glyph's bytecode in one
	run.  To facilitate it,  it also adds a new `c' key to continue to
	the next code range.

	* src/ttdebug.c (debug_coderange): Removed.
	(RunIns): Always run debugger.
	Report `end of program' only after glyph program.
	Update output of `?' key.
	Handle `c' key to loop until end of code range is reached.
	(Usage): Updated.
	(main): Don't handle negative glyph indices.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c: s/exc->/CUR./.

2013-02-05  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (OpStr): Oops!  Add commas back.

2013-02-05  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Fix compilation warnings.

	* src/ttdebug.c (Cur_U_Line): Use `CUR' macro.
	(RunIns): Use global `error' variable.
	Use a const `temp' pointer locally.
	(Usage): Fix declaration.

2013-02-05  Werner Lemberg  <wl@gnu.org>
